Add conclusion about changing design

--- a/a7/a7.answers.tex
+++ b/a7/a7.answers.tex
@@ -205,6 +205,6 @@ that the system is oscillating as it stabilizes, which also makes sense since th
 
 At a mass of 12kg, we noticed that the system is still stable. Additionally, it takes a shorter amount of time for the system to stabilize, and the oscillations appear have disappeared. These all make sense: the poles are still negative, there is less mass for the constant PD controller to counteract, and the system has gone beyond critical damping.
 
-Thus our values of $k_p = 100*220$ and $k_d = 20*220$,  will make the system stable for any weight, but it may not meet the displacement requirement of maximum 10cm drop downward. If we expect very large masses, we must increase $k_p$ and $k_d$ in order to damp at a faster rate. During our state space derivation, we noted that the constants were functions of mass $M$ so there are values of $k_p$ and $k_d$ that would guarantee a displacement requirement for all possible masses. As mass grows, we require the values of $k_p$ and $k_d$ to grow as well.
+Thus our values of $k_p = 100*220$ and $k_d = 20*220$,  will make the system stable for any weight, but it may not meet the displacement requirement of maximum 10cm drop downward. If we expect very large masses, we must increase $k_p$ and $k_d$ in order to damp at a faster rate. During our state space derivation, we noted that the constants were functions of mass $M$ so there are values of $k_p$ and $k_d$ that would guarantee a displacement requirement for all possible masses. As mass grows, we require the values of $k_p$ and $k_d$ to grow as well; thus very high occupancy mass may require a design change.
 
 \end{document}
