--- a/a7/a7.solution.tex
+++ b/a7/a7.solution.tex
@@ -20,7 +20,23 @@
 {\Large\bf Assignment 7}\\
 \end{center}
 
-\section*{Question 1}
+\section*{Question 1 (7 marks)}
+Find the inverse of the given transform in two different ways: using partial fractions and using the convolution theorem. $$F(s) = \frac{7}{(s-3)s^3}$$
+
+\subsection*{Partial Fraction Expansion}
+\begin{align*}
+  \frac{7}{(s-3)s^3} &= \frac{A}{s-3} + \frac{B}{s^3} + \frac{C}{s^2} + \frac{D}{s} \\
+  7 &= As^3 + B(s-3) + Cs(s-3) + Ds^2(s-3) \\
+  7 &= (A+D)s^3 + (C-3D)s^2 + (B-3C)s - 3B
+\end{align*}
+Comparing coefficients, we get a system of equations:
+\begin{align*}
+  A+D &= 0 \\
+  C-3D &= 0 \\
+  B-3C &= 0 \\
+  -3B &= 7
+\end{align*}
+We get $A=\frac{7}{27},B=\frac{-7}{3},C=\frac{-7}{9},D=\frac{-7}{27}$. So the original expression becomes, $$\frac{7}{(s-3)s^3}=\frac{7}{27}\bigg(\frac{1}{s-3}\bigg) - \frac{7}{3}\frac{1}{s^3} - \frac{7}{9}\frac{1}{s^2} - \frac{7}{27}\frac{1}{s}$$ Taking the inverse Laplace transform, $$f(t)=\frac{7}{27}e^{3t} - \frac{7}{6}t^2 - \frac{7}{9}t - \frac{7}{27}$$
 
 \subsection*{Convolution Theorem}
 
@@ -29,7 +45,6 @@ We separate $F(s)$ into the following equation:
 $$7 * \frac{1}{s^3} * \frac{1}{s-3}$$
 
 \noindent Now we do the convolution:
-
 \begin{align*}
     f(t) &= 7 \int_0^{t} \frac{1}{2}\tau^2e^{3(t - \tau)} d\tau
       \\ &= \frac{7e^{3t}}{2} \int_0^t \tau^2e^{-3\tau} d\tau
@@ -52,19 +67,19 @@ $$7 * \frac{1}{s^3} * \frac{1}{s-3}$$
         - \frac{7}{27} + \frac{7e^{3t}}{27}
 \end{align*}
 
-\subsection*{Partial Fraction Expansion}
+\section*{Question 2 (3 marks)}
+Solve for $x(t)$ on $0 \leq t < \infty$, $$x''-7x'=\delta(t-11)$$
 
-Decompose the rational equation.
-
+\noindent Taking the Laplace transform of the equation,
 \begin{align*}
-    \frac{7}{s^3(s-3)} &= \frac{A}{s} + \frac{B}{s^2} + \frac{C}{s^3} + \frac{D}{s-3}
-    \\ 7 &= A(s^3 - 3s^2) + B(s^2 - 3s) + C(s - 3) + Ds^3
-    \\ & A + D = 0, -3A + B = 0, -3B + C = 0, -3C = 7
-    \\ \therefore &C = \frac{-7}{3}, B = \frac{-7}{9}, A = \frac{-7}{27}, D = \frac{7}{27}
-    \\ \therefore \frac{7}{s^3(s-3)} &= \frac{-7}{27}\frac{1}{s} + \frac{-7}{9}\frac{1}{s^2} + \frac{-7}{3}\frac{1}{s^3} + \frac{7}{27}\frac{1}{s-3}
-          \\ L\{\frac{7}{s^3(s-3)}\} &= \frac{-7}{27} + \frac{-7}{9}t + \frac{-7}{6}t^2 + \frac{7}{27}e^{3t}
+  s^2x(s) - 7sx(s) &= e^{-11s} \\
+  x(s) &= \frac{e^{-11s}}{s(s-7)}
 \end{align*}
-
-\section*{Question 2}
+Using partial fraction expansion,
+\begin{align*}
+  \frac{1}{s(s-7)} &= \frac{A}{s} + \frac{B}{s-7} \\
+  A(s-7) + Bs &= 1
+\end{align*}
+Comparing coefficients, $$A=\frac{-1}{7}, B=\frac{11}{7}$$ Substituting back into the original expression, $$\frac{e^{-11s}}{s(s-7)} = e^{-11s}\bigg(\frac{1}{7s} - \frac{1}{7(s-7)}\bigg)$$ Taking the inverse Laplace transform, $$x(t)=\frac{-1}{7}u(t-11) + \frac{1}{7}e^{7(t-11)}u(t-11)$$
 
 \end{document}
