Begin to add grades for a7

--- a/a7/a7.solution.tex
+++ b/a7/a7.solution.tex
@@ -80,6 +80,6 @@ Using partial fraction expansion,
   \frac{1}{s(s-7)} &= \frac{A}{s} + \frac{B}{s-7} \\
   A(s-7) + Bs &= 1
 \end{align*}
-Comparing coefficients, $$A=\frac{-1}{7}, B=\frac{11}{7}$$\hfill(1 mark) \\ Substituting back into the original expression, $$\frac{e^{-11s}}{s(s-7)} = e^{-11s}\bigg(\frac{1}{7s} - \frac{1}{7(s-7)}\bigg)$$ Taking the inverse Laplace transform, $$x(t)=\frac{-1}{7}u(t-11) + \frac{1}{7}e^{7(t-11)}u(t-11)$$\hfill(1 mark)
+Comparing coefficients, $$A=\frac{-1}{7}, B=\frac{1}{7}$$\hfill(1 mark) \\ Substituting back into the original expression, $$\frac{e^{-11s}}{s(s-7)} = e^{-11s}\bigg(-\frac{1}{7s} + \frac{1}{7(s-7)}\bigg)$$ Taking the inverse Laplace transform, $$x(t)=\frac{-1}{7}u(t-11) + \frac{1}{7}e^{7(t-11)}u(t-11)$$\hfill(1 mark)
 
 \end{document}
