--- a/a7/a7.grades.tex
+++ b/a7/a7.grades.tex
@@ -18,16 +18,24 @@
 
 \section*{Redacted (Group 32)}
 
-Question 1: 5/5 \\
-Question 2: 5/5 \\
+Question 1: 7/7 \\
+Question 2: 2/3 - It's not $s(s + 1)$, it's $s(s - 7)$ \\
 
-\noindent Level of questions created: 3/3
+\noindent Level of questions created: 3/3 \\
+
+\noindent Simulation: \\
+\indent Simulation Code: 5/5 \\
+\indent Interpretation: 5/5
 
 \section*{Redacted}
 
 Question 1: 6.5/7 - For the convolution final answer, it should be $-\frac{7t^2}{6}$, not $\frac{7t^2}{6}$. \\
 Question 2: 2/3 - Did not carry over the $7$ in $e^{7t}$\\
 
-\noindent Level of questions created: /3
+\noindent Level of questions created: /3 \\
+
+\noindent Simulation: \\
+\indent Simulation Code: 4/5 - State space equations not shown \\
+\indent Interpretation: 5/5
 
 \end{document}
