Final edits to a7 grades

--- a/a7/a7.solution.tex
+++ b/a7/a7.solution.tex
@@ -40,7 +40,7 @@ We get $A=\frac{7}{27},B=\frac{-7}{3},C=\frac{-7}{9},D=\frac{-7}{27}$. So the or
 
 \subsection*{Convolution Theorem}
 
-We separate $F(s)$ into the following equation: (1 mark)
+We separate $F(s)$ into the following equation: \hfill(1 mark)
 
 $$7 * \frac{1}{s^3} * \frac{1}{s-3}$$
 
