--- a/a8/a8.answers.tex
+++ b/a8/a8.answers.tex
@@ -67,9 +67,22 @@ $$f(x) = e^{2x}$$
 Therefore,
 
 $$f(x) = \sum_{n=-\infty}^{\infty} \frac{1}{2\pi(2 - in)}\bigg(e^{(2 - in)\pi} - e^{-(2 - in)\pi}\bigg) e^{inx}$$
+
 \section*{Problem Set 2}
 \subsection*{Question 1}
+Suppose $f(x)$ is odd, we use first principles to get the derivative, $$f'(x)= \lim_{h\to0}\frac{f(x+h)-f(x)}{h}$$ To determine if the derivative is odd or even, we substitute $-x$,
+\begin{align*}
+    f'(-x) &= \lim_{h\to0}\frac{f(-x+h)-f(-x)}{h} \\
+    &= \lim_{h\to0}\frac{-f(x-h)+f(x)}{h} \\
+    &= \lim_{h\to0}\frac{f(x-h)-f(x)}{-h} \\
+    &= \lim_{h\to0}\frac{f(x-h)-f(x)}{-h} \\
+    &= f'(x)
+\end{align*}
+Thus the derivative of an odd function is even.
+
 \subsection*{Question 2}
+$$\cot x = \frac{1}{\tan x}$$
+Cotangent is not piecewise continuous on $[0, \pi]$ as $\tan x$ has values of $0$ at $0$ and $\pi$. Since cotangent is the reciprocal of tangent, it will approach infinity where at these values, making the function not continuous.
 
 \section*{Simulation}
 
