--- a/a8/a8.solutions.tex
+++ b/a8/a8.solutions.tex
@@ -26,21 +26,25 @@ We require coefficients $a_0, a_n, b_n$.
   a_0 &= \frac{1}{2\pi}\int_{-\pi}^{\pi}x^2 dx \\
   &= \frac{1}{\pi}\int_{0}^{\pi}x^2 dx \tag{even integrand} \\
   &= \frac{1}{\pi} \bigg(\frac{x^3}{3}\bigg) \bigg|_0^{\pi} \\
-  &= \frac{\pi^2}{3} \\
+  &= \frac{\pi^2}{3} \tag{1 mark} \\
   a_n &= \frac{1}{\pi}\int_{-\pi}^{\pi}x^2\cos(nx) dx \\
   &= \frac{2}{\pi}\int_{0}^{\pi}x^2\cos(nx) dx \tag{even integrand} \\
   % TODO: show integration by parts here
   &= \frac{2}{\pi} \bigg( \frac{(n^2x^2-2)\sin(nx) + 2nx\cos(nx)}{n^3}\bigg) \bigg|_0^{\pi} \\
-  &= \frac{2}{\pi} \bigg( \frac{(n^2\pi^2-2)\sin(n\pi) + 2n\pi\cos(n\pi)}{n^3}\bigg)
+  &= \frac{2}{\pi} \bigg( \frac{(n^2\pi^2-2)\sin(n\pi) + 2n\pi\cos(n\pi)}{n^3}\bigg) \tag{1 mark}
 \end{align*}
 Here we note that for multiples of $\pi$, sine is always 0 and cosine alternates between $-1$ and $1$. Thus we can rewrite as
 \begin{align*}
   a_n &= \frac{2}{\pi} \bigg( (-1)^n \frac{2\pi}{n^2}\bigg) \\
   &= (-1)^n \frac{4}{n^2} \\
-  b_n &= \frac{1}{\pi}\int_{-\pi}^{\pi}x^2\sin(nx) dx
+    b_n &= \frac{1}{\pi}\int_{-\pi}^{\pi}x^2\sin(nx) dx \tag{odd integrand}\\
+       &= 0 \tag{1 mark}
 \end{align*}
 Note that the integrand is composed of two functions, $x^2$ which is even and $\sin(nx)$ which is odd. We know that the product of an even function and an odd function is an odd function so the entire integrand is odd. Since our interval of integration is symmetric, we know the integral will evaluate to $0$.
-Substituting the coefficients in the series expansion, $$f(x) = \frac{\pi^2}{3} + \sum_{n=1}^{\infty} (-1)^n \frac{4}{n^2} \cos(nx)$$
+Substituting the coefficients in the series expansion,
+\begin{align*}
+    f(x) = \frac{\pi^2}{3} + \sum_{n=1}^{\infty} (-1)^n \frac{4}{n^2} \cos(nx) \tag{1 mark}
+\end{align*}
 
 \subsection*{Complex}
 We require coefficient $c_n$.
@@ -49,10 +53,24 @@ We require coefficient $c_n$.
   % TODO: show integration by parts here
   &= \frac{1}{2\pi} \bigg( \frac{e^{-inx}(in^2x^2 + 2nx - 2i)}{n^3}\bigg) \bigg|_{-\pi}^{\pi} \\
   &= \frac{1}{\pi} \bigg( \frac{(n^2\pi^2-2)\sin(n\pi) + 2n\pi\cos(n\pi)}{n^3}\bigg) \\
-  &= (-1)^n \frac{2}{n^2}
+  &= (-1)^n \frac{2}{n^2} \tag{1 mark}
 \end{align*}
 Substituting in the series expression,
-$$f(x) = \sum_{n=-\infty}^{\infty} (-1)^n \frac{2}{n^2} e^{inx}$$
+\begin{align*}
+f(x) = \sum_{n=-\infty}^{\infty} (-1)^n \frac{2}{n^2} e^{inx}
+\end{align*}
+
+\noindent We note that this is discontinuous at $n = 0$. So we solve for $c_0$ manually.
+\begin{align*}
+    c_0 &= \frac{1}{2\pi}\int_{-\pi}^{\pi} x^2 dx \\
+        &= \frac{\pi^2}{3} \tag{1 mark}
+\end{align*}
+
+\noindent Therefore,
+
+\begin{align*}
+    f(x) = \frac{\pi^2}{3} + \sum_{n=1}^{\infty} (-1)^n \frac{2}{n^2} (e^{inx} + e^{-inx}) \tag{1 mark}
+\end{align*}
 
 \section*{Question 2}
 Derive the Fourier integral representation of the following function.
@@ -66,21 +84,25 @@ e^{2x} & 0 \leq x < L \\
   A(\omega) &= \frac{1}{\pi} \int_0^L e^{2x}\cos(\omega x) dx \\
   &= \frac{1}{\pi} \bigg( \frac{e^{2x}(\omega \sin(\omega x) + 2\cos(\omega x))}{\omega^2 + 4} \bigg) \bigg|_0^L \\
   &= \frac{1}{\pi} \bigg( \frac{e^{2x}(\omega \sin(\omega x) + 2\cos(\omega x)) - 2}{\omega^2 + 4} \bigg) \bigg|_0^L \\
-  &= \frac{1}{\pi} \frac{e^{2L}(\omega \sin(L\omega) + 2\cos(L\omega)) - 2}{\omega^2 + 4} \\
+  &= \frac{1}{\pi} \frac{e^{2L}(\omega \sin(L\omega) + 2\cos(L\omega)) - 2}{\omega^2 + 4} \tag{1 mark} \\
   B(\omega) &= \frac{1}{\pi} \int_0^L e^{2x}\sin(\omega x) dx \\
   &= \frac{1}{\pi} \bigg( \frac{e^{2x}(2\sin(\omega x) - \omega \cos(\omega x))}{\omega^2 + 4} \bigg) \bigg|_0^L \\
   &= \frac{1}{\pi} \bigg( \frac{e^{2x}(2\sin(\omega x) - \omega \cos(\omega x)) + w}{\omega^2 + 4} \bigg) \bigg|_0^L \\
-  &= \frac{1}{\pi} \frac{e^{2L}(2\sin(L\omega) - \omega \cos(L\omega)) + \omega}{\omega^2 + 4}
+  &= \frac{1}{\pi} \frac{e^{2L}(2\sin(L\omega) - \omega \cos(L\omega)) + \omega}{\omega^2 + 4} \tag{1 mark}
 \end{align*}
 Substituting,
-$$f(x) = \int_0^{\infty}[\frac{1}{\pi} \frac{e^{2L}(\omega \sin(L\omega) + 2\cos(L\omega)) - 2}{\omega^2 + 4}\cos(\omega x) + \frac{1}{\pi} \frac{e^{2L}(2\sin(L\omega) - \omega \cos(L\omega)) + \omega}{\omega^2 + 4}\sin(\omega x)] d\omega$$
+\begin{align*}
+    f(x) = \int_0^{\infty}[\frac{1}{\pi} \frac{e^{2L}(\omega \sin(L\omega) + 2\cos(L\omega)) - 2}{\omega^2 + 4}\cos(\omega x) + \frac{1}{\pi} \frac{e^{2L}(2\sin(L\omega) - \omega \cos(L\omega)) + \omega}{\omega^2 + 4}\sin(\omega x)] d\omega \tag{1 mark}
+\end{align*}
 
 \noindent Alternatively,
 \begin{align*}
   C(\omega) &= \frac{1}{2\pi} \int_{0}^{L}e^{2x}e^{-i\omega x} dx \\
   &= \frac{1}{2\pi} \int_{0}^{L}e^{(2-i\omega)x} dx \\
-  &= \frac{1}{2\pi} \bigg[ \frac{-ie^2(1-e^{-iL\omega})}{\omega} \bigg]
+  &= \frac{1}{2\pi} \frac{i(e^{L(2 - i\omega)} - 1)}{w + 2i} \tag {2 marks} \\
 \end{align*}
 Substituting,
-$$f(x) = \int_{-\infty}^{\infty} \frac{1}{2\pi} \bigg[ \frac{-ie^2(1-e^{-iL\omega})}{\omega} \bigg] e^{i\omega x} d\omega$$
+\begin{align*}
+    f(x) = \frac{1}{2\pi} \int_{-\infty}^{\infty} \bigg[ \frac{i(e^{L(2 - i\omega)} - 1)}{\omega + 2i} \bigg] e^{i\omega x} d\omega \tag{1 mark}
+\end{align*}
 \end{document}
